--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
+    volumes: 
+      - ./backend/data:/app/app/data
     healthcheck:
       test: [
         "CMD", 
