chore: Adicionar arquivos SQLite WAL ao .gitignore
- Adicionar *.db-wal e *.db-shm (arquivos temporários do SQLite)
- Incluir paths específicos de backend/data/
- Prevenir versionamento de arquivos de runtime do banco de dados

Esses arquivos são criados automaticamente pelo SQLite em modo WAL
(Write-Ahead Logging) e não devem ser versionados.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,12 @@ coverage/
 /backend/app/data/*.sqlite3
 *.db
 
+# SQLite WAL (Write-Ahead Logging) files
+*.db-wal
+*.db-shm
+/backend/data/*.db-wal
+/backend/data/*.db-shm
+
 # Logs
 *.log
 logs/
